--- a/English/limerick.css
+++ b/English/limerick.css
@@ -1,9 +1,10 @@
-ul {
+  ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     width: 200px;
     background-color: #f1f1f1;
+    border: 1px solid #555;
   }
   
   li a {
@@ -13,8 +14,21 @@ ul {
     text-decoration: none;
   }
   
-  /* Change the link color on hover */
-  li a:hover {
+  li {
+    text-align: center;
+    border-bottom: 1px solid #555;
+  }
+  
+  li:last-child {
+    border-bottom: none;
+  }
+  
+  li a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  
+  li a:hover:not(.active) {
     background-color: #555;
     color: white;
   }
